# Iglesia-Poblado-

./: .gitignore  CMakeLists.txt  IglesiaPoblado.cpp  IglesiaPoblado.ps1  README.md  README_CREDITOS.md  VentanaCreditos.cpp  compilar.bat  ejecutar.bat  resource.h
src/: IglesiaPoblado.cs  main.cpp
